Blog APIs and updated API docs
